--- a/ElevenNote.WebMVC/Web.config
+++ b/ElevenNote.WebMVC/Web.config
@@ -10,8 +10,8 @@
       type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
       requirePermission="false"/>
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ElevenNote.WebMVC-20210327115919.mdf;Initial Catalog=aspnet-ElevenNote.WebMVC-20210327115919;Integrated Security=True"
+  <connectionStrings><!--includes the source database name and other paramerter needed to establish  tje initial connectionstring-->
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=ElevenNoteMVC;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
