--- a/ElevenNote.Data/ElevenNote.Data.csproj
+++ b/ElevenNote.Data/ElevenNote.Data.csproj
@@ -63,6 +63,10 @@
     <Compile Include="Migrations\202103272007506_firstMigration.Designer.cs">
       <DependentUpon>202103272007506_firstMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202103272228054_firstMigration1.cs" />
+    <Compile Include="Migrations\202103272228054_firstMigration1.Designer.cs">
+      <DependentUpon>202103272228054_firstMigration1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -77,6 +81,15 @@
     <EmbeddedResource Include="Migrations\202103272007506_firstMigration.resx">
       <DependentUpon>202103272007506_firstMigration.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103272228054_firstMigration1.resx">
+      <DependentUpon>202103272228054_firstMigration1.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ElevenNote.Models\ElevenNote.Models.csproj">
+      <Project>{01c7c16d-c4eb-4efe-92eb-51ed63837f77}</Project>
+      <Name>ElevenNote.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
