--- a/ElevenNote.WebMVC/ElevenNote.WebMVC.csproj
+++ b/ElevenNote.WebMVC/ElevenNote.WebMVC.csproj
@@ -238,6 +238,7 @@
     <Content Include="Views\Note\Index.cshtml" />
     <Content Include="Views\Note\Create.cshtml" />
     <Content Include="Views\Note\Create2.cshtml" />
+    <Content Include="Views\Note\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
